--- a/css/style.css
+++ b/css/style.css
@@ -157,13 +157,13 @@ a:hover{
 }
 
 .m-d-lpage{ 
-    margin-right: 5%;
+
     margin-top: 15px;
 }
 .m-d-lpage > a{ 
     display: inline-block; 
     margin-left: 60px;
-    font-size: 15px;
+    font-size: 14px;
     letter-spacing: 0.05em;
     color: #fff;
     font-weight: 500;
@@ -177,12 +177,13 @@ a:hover{
     background: linear-gradient(to right, #29abe2 , #1b89cc); 
 }
 
+.m-d-rsocial{margin-top: 15px;}
+
 .m-d-rsocial a{
     display: inline-block;
-    height: 60px;
-    width: 60px;
-    background: red;
-
+    height: 40px;
+    width: 40px;
+    margin-left: 10px;
 }
 
 .menu-mobile{ display: none;}
@@ -195,10 +196,9 @@ a:hover{
 
 /* ANIMAÇÃO - HOME */
 
-.anim-sec{ background: #051b26;}
+.anim-sec{ }
 
 .anim-sec > img{
-    height: 900px;
     width: 100%;
     top: 0;
     left: 50%;
@@ -218,7 +218,7 @@ a:hover{
 
 .introd-h{
     height: 1000px;
-    background: url(../img/bg/bg-introd.svg) no-repeat;
+    background: url(../img/bg/bg-introd-2.svg) no-repeat;
     background-size: cover;
     background-color: rgba(255,255,255,0) !important;
 }
